[feature V22.10.19] Add define response from file
